k8s/apps/immich/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Immich"
    gethomepage.dev/description: "Photo and video management"
    gethomepage.dev/group: "life"
    gethomepage.dev/icon: "immich.png"
    gethomepage.dev/href: "https://immich.item.fyi"
    gethomepage.dev/siteMonitor: "http://immich-server.immich.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=immich-server"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`immich.item.fyi`)
      services:
        - name: immich-server
          port: 80
  tls: {}
